[project]
name = "zabbixci"
description = "Source control for Zabbix templates in Git"
readme = "README.md"
dynamic = ["version"]

[project.license]
file = "LICENSE.txt"

readme = "README.md"
keywords = ["zabbix", "git", "source control", "templates"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Version Control",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Environment :: Console",
]

authors = [
    {name = "Wouter de Bruijn", email = "wouter.debruijn@retigra.nl"},
    {name = "Raymond Kuiper", email = "raymond.kuiper@retigra.nl"}
]
dependencies = [
    "zabbix_utils",
    "python-dotenv",
    "ruamel.yaml",
    "regex",
    "pygit2",
]


[project.urls]
Homepage = "https://github.com/retigra/zabbixci"
Repository = "https://github.com/retigra/zabbixci"
Issues = "https://github.com/retigra/zabbixci/issues"
Changelog = "https://github.com/retigra/zabbixci/releases"
Discussions = "https://github.com/retigra/ZabbixCI/discussions"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zabbixci", "zabbixci.*"]

[tool.setuptools_scm]

[project.scripts]
zabbixci = "zabbixci.cli:parse_cli"